RESOLVED FIXED 256795
BaselineContext m_items should not hold raw pointers
https://bugs.webkit.org/show_bug.cgi?id=256795
Summary BaselineContext m_items should not hold raw pointers
Sammy Gill
Reported 2023-05-15 11:35:19 PDT
Instead of raw pointer's to the renderers we should use something else like a WeakPtr
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-15 11:35:46 PDT
zalan
Comment 2 2023-05-15 11:36:17 PDT
(In reply to Sammy Gill from comment #0) > Instead of raw pointer's to the renderers we should use something else like > a WeakPtr Preferably CheckedPtr.
Sammy Gill
Comment 3 2023-05-16 13:29:06 PDT
EWS
Comment 4 2023-05-16 17:53:01 PDT
Committed 264132@main (62aba919edb6): <https://commits.webkit.org/264132@main> Reviewed commits have been landed. Closing PR #13935 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.