Change BaselineGroup's items HashSet to WeakHashSet. https://bugs.webkit.org/show_bug.cgi?id=256795 rdar://109363884

Reviewed by Tim Nguyen.

In order to keep track of items within a baseline sharing group, this
class currently stores raw pointers to renderers within a HashSet.
To improve upon this we can change the HashSet into a WeakHashSet
since the baseline alignment code does not need to express any
sort of ownership over the renderers.

The size() method on BaselineGroup was also changed to computeSize()
to make it clear that we will need to non-trivially determine the
number of items in the baseline sharing group.

* Source/WebCore/rendering/BaselineAlignment.cpp:
(WebCore::BaselineGroup::update):
(WebCore::BaselineGroup::isCompatible const):
* Source/WebCore/rendering/BaselineAlignment.h:
(WebCore::BaselineGroup::computeSize const):
(WebCore::BaselineGroup::size const): Deleted.
* Source/WebCore/rendering/GridBaselineAlignment.cpp:
(WebCore::GridBaselineAlignment::baselineOffsetForChild const):

Canonical link: https://commits.webkit.org/264132@main